Fixed layout problems for the console

--- a/runframe.css
+++ b/runframe.css
@@ -1,5 +1,5 @@
 body {
-	display: flex;
+	display: inline-flex;
 	margin: 0px;
   	flex-direction: column;
   	overflow: hidden;
